--- a/AppDevelopment/AdvanceAppDevelopment/package.json
+++ b/AppDevelopment/AdvanceAppDevelopment/package.json
@@ -15,10 +15,14 @@
     "@firebase/auth": "^1.6.0",
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
+    "@mui/x-charts": "^6.19.5",
     "axios": "^1.6.7",
+    "chart.js": "^4.4.1",
     "firebase": "^10.8.0",
     "lazy": "^1.0.11",
     "react": "^18.2.0",
+    "react-chartist": "^0.14.4",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.1",
     "react-scroll": "^1.9.0",
