--- a/AppDevelopment/AdvanceAppDevelopment/package.json
+++ b/AppDevelopment/AdvanceAppDevelopment/package.json
@@ -16,8 +16,10 @@
     "@mui/icons-material": "^5.15.10",
     "@mui/material": "^5.15.10",
     "@mui/x-charts": "^6.19.5",
+    "@mui/x-date-pickers": "^6.19.6",
     "axios": "^1.6.7",
     "chart.js": "^4.4.1",
+    "dayjs": "^1.11.10",
     "firebase": "^10.8.0",
     "lazy": "^1.0.11",
     "react": "^18.2.0",
