--- a/AppDevelopment/AdvanceAppDevelopment/package.json
+++ b/AppDevelopment/AdvanceAppDevelopment/package.json
@@ -21,6 +21,7 @@
     "chart.js": "^4.4.1",
     "dayjs": "^1.11.10",
     "firebase": "^10.8.0",
+    "jwt-decode": "^4.0.0",
     "lazy": "^1.0.11",
     "react": "^18.2.0",
     "react-chartist": "^0.14.4",
